fix: Copilotレビュー対応 - getFirst/getLast使用と同スコアソートテスト追加
- get(0)/get(size-1)をgetFirst()/getLast()に変更（Java 21イディオム）
- 同スコア時の軸名昇順ソートテストを追加

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>